fix homepage gaps

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,8 +21,9 @@ body {
   background-position:50% top;
   background-color:white;
   color:white;
-  height:480px;
+  height:480px !important;
   text-align:center;
+  margin-top:-21px !important;
   
   h1 {
     margin-top:80px;
